# Build-a-medical-chatbot-Python-langchain-pinecone-RAG-AWS-Docker-

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py  store_index.py
src/: helper.py  prompt.py
